chore(ci): align release workflow JDK with project toolchain
  - update `.github/workflows/release.yml` to use Java 21
  - match Gradle toolchain configured in `build.gradle.kts`
  - reduce risk of release-only build/version mismatch